declare subcommand classes package-private